GUI: stop using some problematic icon names
These two icons have had some wonky rendering in GTK 3 for some time,
due to being removed from Adwaita and still having fullcolor
fallbacks in AdwaitaLegacy. Use different icon names instead.

--- a/pynicotine/gtkgui/ui/settings/plugin.ui
+++ b/pynicotine/gtkgui/ui/settings/plugin.ui
@@ -142,7 +142,7 @@
                                         <property name="visible">True</property>
                                         <child>
                                           <object class="GtkImage">
-                                            <property name="icon-name">emblem-system-symbolic</property>
+                                            <property name="icon-name">applications-system-symbolic</property>
                                             <property name="visible">True</property>
                                           </object>
                                         </child>
